Final change for the magic link. Set the persistent value to LOCAL for the signin.

--- a/success.html
+++ b/success.html
@@ -3,23 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Verification Success</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
-    }
-    h1 {
-      color: green;
-    }
-  </style>
+  <title>Success</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Sign-In Successful!</h1>
-  <p>Magic Link Was Successful</p>
+  <h1>Sign-In Successful</h1>
+  <p>Welcome! You have successfully signed in using the magic link.</p>
+
+  <p id="userEmail"></p>
+
+  <script src="checkSignIn.js"></script>
 </body>
 </html>
