Added a few more features to the signed in page

--- a/success.html
+++ b/success.html
@@ -12,6 +12,8 @@
 
   <p id="userEmail"></p>
 
+  <button id="logoutButton">Logout</button>
+
   <script src="checkSignIn.js"></script>
 </body>
 </html>
